fixing svg not showing up

--- a/src/css/partials/_landing-page.scss
+++ b/src/css/partials/_landing-page.scss
@@ -3,7 +3,7 @@
     margin-left: 60px;
   }
   .back-image {
-    background: url(../../public/emerick-img1.svg);
+    background-image: url("/public/emerick-img1.svg");
     background-attachment: scroll;
     margin-left: 20px;
     z-index: 1;
